[gd_scene load_steps=11 format=3 uid="uid://dacfwdnbqua8u"]

[ext_resource type="Script" path="res://scripts/bosses/eigth_boss.gd" id="1_oaa4r"]
[ext_resource type="Texture2D" uid="uid://bov1kpukmu0es" path="res://graphics/boss_8_body.png" id="2_tmm8s"]
[ext_resource type="Texture2D" uid="uid://c8wr360fees3y" path="res://graphics/boss_8_chasis.png" id="3_ldkam"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="5_03mge"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="6_n6hjg"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="7_ravan"]
[ext_resource type="Texture2D" uid="uid://bmph75rlbsf0f" path="res://graphics/boss_launcher.png" id="8_0d8ql"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(32, 32)

[node name="EigthGuardian" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_oaa4r")
base_fire_interval = 0.3
base_hp = 50
max_hp = 100
hp_per_level = 10
base_speed = 128
max_speed = 256
speed_per_level = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_48w8c")

[node name="Body" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_tmm8s")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Chasis" type="Sprite2D" parent="."]
texture = ExtResource("3_ldkam")

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("5_03mge")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("6_n6hjg")]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("7_ravan")
metadata/_edit_use_anchors_ = true

[node name="MuzzlePivot" type="Marker2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="MuzzlePivot" groups=["Cannons"]]
position = Vector2(12, -22)
texture = ExtResource("8_0d8ql")

[node name="Muzzle" type="Marker2D" parent="MuzzlePivot/Sprite2D2"]
position = Vector2(16, 0)

[node name="Sprite2D3" type="Sprite2D" parent="MuzzlePivot" groups=["Cannons"]]
position = Vector2(12, 22)
texture = ExtResource("8_0d8ql")

[node name="Muzzle2" type="Marker2D" parent="MuzzlePivot/Sprite2D3"]
position = Vector2(16, 0)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SwarmSpot" type="Marker2D" parent="."]
position = Vector2(36, 0)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
